# lxinput-qt

./: CMakeLists.txt  lxinput-qt.cpp  lxinput-qt.h  lxinput-qt.kdev4  maindialog.h
.kdev4/: lxinput-qt.kdev4
data/: lxinput-qt.desktop.in
debian/: changelog  control  rules
src/: CMakeLists.txt  lxinput-qt.cpp  lxinput.ui  lxqt-config-input.cpp  maindialog.cpp  maindialog.h
src/translations/: lxinput-qt_template-da.ts  lxinput-qt_template-es.ts  lxinput-qt_template-eu.ts  lxinput-qt_template-fi.ts  lxinput-qt_template-gl.ts  lxinput-qt_template-hr.ts  lxinput-qt_template-id.ts  lxinput-qt_template-it.ts  lxinput-qt_template-ja.ts  lxinput-qt_template-nl.ts  lxinput-qt_template-pl.ts  lxinput-qt_template-pt.ts  lxinput-qt_template-pt_BR.ts  lxinput-qt_template-sv.ts  lxinput-qt_template-zh_CN.ts  lxinput-qt_template-zh_TW.ts  lxqt-config-input_bg.ts  lxqt-config-input_fr.ts  lxqt-config-input_pt_BR.ts
